Fixes student tile overflow and changes event names

--- a/frontend/src/screens/ParentDash/index.css
+++ b/frontend/src/screens/ParentDash/index.css
@@ -45,6 +45,8 @@
     margin: 1rem 1rem;
     font-weight: 600;
     font-size: x-large;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .colour {
